--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-image-crop": "^10.0.8",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "react-router-dom": "^6.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
