--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0",
     "react-router-dom": "^6.4.2",
-    "simplebar-react": "^2.4.3"
+    "simplebar-react": "^2.4.3",
+    "react-hook-form": "^7.38.0"
   },
   "overrides": {
     "@svgr/webpack": "^6.5.0"
