--- a/package.json
+++ b/package.json
@@ -13,15 +13,19 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "axios": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.38.0",
     "react-image-crop": "^10.0.8",
+    "react-redux": "^8.0.4",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "simplebar-react": "^2.4.3",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0",
-    "react-router-dom": "^6.4.2",
-    "simplebar-react": "^2.4.3",
-    "react-hook-form": "^7.38.0"
+    "redux-persist": "^6.0.0",
+    "redux": "^4.2.0"
   },
   "overrides": {
     "@svgr/webpack": "^6.5.0"
