--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0",
     "redux-persist": "^6.0.0",
-    "redux": "^4.2.0"
+    "redux": "^4.2.0",
+    "@iconify/react": "^4.0.0"
   },
   "overrides": {
     "@svgr/webpack": "^6.5.0"
